# Correspondence-Free-Region-Localization

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  package-lock.json  package.json
apps/basic_app/: CMakeLists.txt
apps/basic_app/include/: main.h
apps/basic_app/src/: main.cpp
apps/console_app/: CMakeLists.txt
apps/console_app/src/: main.cpp
apps/optimization_lib_tests/: CMakeLists.txt
apps/optimization_lib_tests/src/: main.cpp
apps/plugins_tests/: CMakeLists.txt
apps/plugins_tests/src/: main.cpp
libs/optimization-lib/: CMakeLists.txt
libs/optimization-lib/include/: constraints-positional.h  penalty-dynamics.h  regularization-acceleration-l2.h  total-objective.h  utils.h
libs/optimization-lib/src/: distortion-symmetric-dirichlet.cpp  objective-symmetric-dirichlet.cpp  penalty-dynamics.cpp  solver.cpp
libs/optimization_lib/: CMakeLists.txt
libs/optimization_lib/include/: utils.h
libs/optimization_lib/include/core/: core.h  updatable_object.h  utils.h
libs/optimization_lib/include/data_providers/: adjacent_faces_data_provider.h  coordinate_data_provider.h  coordinate_diff_data_provider.h  cross_coordinate_diff_data_provider.h  data_provider.h  edge_pair_data_provider.h  empty_data_provider.h  face_data_provider.h  face_fan_data_provider.h  mesh_data_provider.h  mesh_wrapper.h  plain_data_provider.h
libs/optimization_lib/include/iterative_methods/: gradient_descent.h  iterative_method.h  newton_method.h  projected_gradient_descent.h
libs/optimization_lib/include/objective_functions/: AreaDistortion.h  AreaDistortionOneRing.h  AreaPreservingOneRing.h  BendingEdge.h  ConstrainedObjectiveFunction.h  LSCM.h  Lagrangian.h  LagrangianAreaStLscm.h  LagrangianLscmStArea.h  LeastSquaresConformal.h  ObjectiveFunction.h  OneRingAreaPreserving.h  PenaltyPositionalConstraints.h  SymmetricDirichlet.h  SymmetricDirichletCompositeMajorization.h  TestConstrainedFunction.h  TestConstrainedRosenbrock.h  TotalObjective.h  TriangleMeshObjectiveFunction.h  VertexPositionObjective.h  angle_preserving.h  area_preserving.h  barycenter_position_objective.h  composite_objective.h  concrete_objective.h  constraints_positional.h  coordinate_diff_objective.h  coordinate_objective.h  cross_coordinate_diff_objective.h  dense_objective_function.h  distortion_symmetric_dirichlet.h  edge_pair_angle_objective.h  element.h  integer.h  integer_objective.h  objective_area_preserving.h  objective_function.h  objective_function_base.h  objective_symmetric_dirichlet.h  one_ring_area_preserving.h  (+24 more)
libs/optimization_lib/include/objective_functions/edge_pair/: edge_pair_angle_objective.h  edge_pair_integer_translation_objective.h  edge_pair_length_objective.h  edge_pair_objective.h  edge_pair_translation_objective.h
libs/optimization_lib/include/objective_functions/position/: position_objective.h  (+6 more)
libs/optimization_lib/include/rds_old/: distortion-symmetric-dirichlet.h  newton.h
libs/optimization_lib/include/solvers/: EigenSparseSolver.h  GradientDescentSolver.h  NewtonSolver.h  PardisoSolver.h  eigen_sparse_solver.h  gradient_descent_solver.h  newton.h  newton_solver.h  pardiso_solver.h  solver.h  worhpSolver.h
libs/optimization_lib/include/utils/: mesh_wrapper.h  objective_function_data_provider.h  type_definitions.h  utils.h
libs/optimization_lib/src/core/: updatable_object.cpp
libs/optimization_lib/src/data_providers/: adjacent_faces_data_provider.cpp  coordinate_data_provider.cpp  coordinate_diff_data_provider.cpp  cross_coordinate_diff_data_provider.cpp  data_provider.cpp  edge_pair_data_provider.cpp  empty_data_provider.cpp  face_data_provider.cpp  face_fan_data_provider.cpp  mesh_wrapper.cpp  plain_data_provider.cpp
libs/optimization_lib/src/iterative_methods/: gradient_descent.cpp  iterative_method.cpp  newton_method.cpp
libs/optimization_lib/src/objective_functions/: AreaDistortion.cpp  AreaDistortionOneRing.cpp  AreaPreservingOneRing.cpp  BendingEdge.cpp  ConstrainedObjectiveFunction.cpp  LSCM.cpp  Lagrangian.cpp  LagrangianAreaStLscm.cpp  LagrangianLscmStArea.cpp  LeastSquaresConformal.cpp  ObjectiveFunction.cpp  OneRingAreaPreserving.cpp  PenaltyPositionalConstraints.cpp  SymmetricDirichlet.cpp  SymmetricDirichletCompositeMajorization.cpp  TestConstrainedFunction.cpp  TestConstrainedRosenbrock.cpp  TotalObjective.cpp  TriangleMeshObjectiveFunction.cpp  VertexPositionObjective.cpp  angle_preserving.cpp  area_preserving.cpp  barycenter_position_objective.cpp  composite_objective.cpp  concrete_objective.cpp  constraints_positional.cpp  distortion_symmetric_dirichlet.cpp  integer.cpp  objective_area_preserving.cpp  objective_function.cpp  objective_function_base.cpp  objective_symmetric_dirichlet.cpp  one_ring_area_preserving.cpp  penalty_dynamics.cpp  penalty_positional_constraints.cpp  position.cpp  position_objective.cpp  regularization_acceleration-l2.cpp  regularization_acceleration_l2.cpp  seamless_objective.cpp  (+10 more)
libs/optimization_lib/src/rds_old/: eigen-sparse-solver.cpp  total-objective.cpp
libs/optimization_lib/src/solvers/: EigenSparseSolver.cpp  GradientDescentSolver.cpp  NewtonSolver.cpp  PardisoSolver.cpp  eigen_sparse_solver.cpp  gradient_descent_solver.cpp  newton.cpp  newton_solver.cpp  pardiso_solver.cpp  solver.cpp  worhpSolver.cpp
libs/optimization_lib/src/utils/: mesh_wrapper.cpp  objective_function_data_provider.cpp  utils.cpp
node-addon/: AutocutsEngine.h  AutocutsEngineModule.cpp  CMakeLists.txt  addon.cpp  engine.cpp  engine.h  index.cpp
node_addon/: AutocutsEngine.cpp  CMakeLists.txt  addon.cpp  engine.cpp  engine.h
node_addon/include/: engine.h
node_addon/src/: addon.cpp  engine.cpp
plugins/: CMakeLists.txt
plugins/basic-menu/include/: basic-menu.h
plugins/basic-menu/src/: basic-menu.cpp
plugins/basic_app/include/: app_utils.h  basic_app.h  core.h
plugins/basic_app/src/: basic_app.cpp  core.cpp
plugins/basic_menu/include/: basic_menu.h  menu_utils.h
plugins/basic_menu/src/: basic_menu.cpp
tests/optimization_lib_tests/: CMakeLists.txt
tests/optimization_lib_tests/src/: finite_differentiation_tests.cpp
(+75 files in other folders)
